# PDF-Insight

./: .gitignore  .gitkeep  README.md  config.py  deployment-steps.md  evaluation.ipynb  ingest.py  notes.md  pyproject.toml  requirement.txt  server.py  streamlit_app.py
app/: chat.py  embeddings.py  llm_chain.py  loaders.py  splitters.py
evals/: evaluation.ipynb
